sumo chequeo de permisos en los templates

--- a/admin/src/web/templates/ecuestre/index.html
+++ b/admin/src/web/templates/ecuestre/index.html
@@ -115,11 +115,14 @@
             <i style="transform: scale(0.75);" class="fa fa-filter me-2 mt-1"></i>
             Filtros
         </a>
-
+        
+        {% if check_permission(session,'encuestre_new')%}
         <a href="{{ url_for('ecuestre.create') }}" class="btn btn-primary d-flex align-items-center pb-2">
             <i style="transform: scale(1.4);" class="fa-light fa-plus me-2"></i>
             Nuevo
         </a>
+        {% endif %}
+
     </div>
 </header>
 <div class="collapse mb-3 {% if search or activity_id %}show{% endif %}" id="search-container">
@@ -223,14 +226,22 @@
             <td>{{ horse.assigned_location }}</td>
             <td>
                 <div class="action-icons">
+
+                    {% if check_permission(session,'encuestre_show')%}
                     <!-- Icono de vista detallada -->
                     <a href="{{ url_for('ecuestre.show', id=horse.id) }}" title="Ver detalles">
                         <i class="fas fa-file-text"></i>
                     </a>
+                    {% endif %}
+
+                    {% if check_permission(session,'encuestre_update')%}
                     <!-- Icono de edición -->
                     <a href="{{ url_for('ecuestre.update', id=horse.id) }}" title="Editar">
                         <i class="fas fa-edit"></i>
                     </a>
+                    {% endif %}
+
+                    {% if check_permission(session,'encuestre_destroy')%}
                     <!-- Formulario de eliminación -->
                     <form action="{{ url_for('ecuestre.destroy', id=horse.id) }}" method="POST" style="display: inline;"
                         onsubmit="return confirm('¿Quieres eliminar a {{horse.name}} y todos sus datos?');">
@@ -239,6 +250,8 @@
                             <i class="fas fa-trash-alt"></i>
                         </button>
                     </form>
+                    {% endif %}
+
                 </div>
             </td>
         </tr>
