--- a/admin/src/web/templates/ecuestre/show.html
+++ b/admin/src/web/templates/ecuestre/show.html
@@ -91,6 +91,7 @@
         <p>Información registrada acerca del caballo</p>
     </div>
     <div class="d-flex flex-row justify-content-center align-items-center gap-2">
+        {% if check_permission(session,'encuestre_destroy')%}
         <form action="{{ url_for('ecuestre.destroy', id=horse.id) }}" method="POST" style="display: inline;"
             onsubmit="return confirm('¿Quieres eliminar a {{horse.name}} y todos sus datos?');">
             <button type="submit" title="Eliminar" class="btn btn-danger">
@@ -98,10 +99,13 @@
                 Eliminar
             </button>
         </form>
+       {% endif %}
+       {% if check_permission(session,'encuestre_update')%}
         <a class="btn btn-warning" href="{{ url_for('ecuestre.update', id=horse.id) }}">
             <i class="fas fa-edit me-1"></i>
             Editar
         </a>
+        {% endif %}
         <a id="btn-back" class="btn border border-2" href="{{ url_for('ecuestre.index') }}">
             <i style="transform: scale(0.6);" class="fa fa-chevron-left me-1"></i>
             Volver al listado
@@ -295,16 +299,22 @@
             </table>
 
             <div class="d-flex flex-row gap-2 justify-content-end mt-3 w-100">
+                
+                {% if check_permission(session,'encuestre_update')%}
                 <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                     data-bs-target="#modal-attach-url">
                     <i style="transform: scale(0.8);" class="me-1 fa fa-link"></i>
                     Enlace
                 </button>
+                {% endif %}
+
+                {% if check_permission(session,'encuestre_update')%}
                 <button type="button" class="btn btn-outline-custom" data-bs-toggle="modal"
                     data-bs-target="#modal-upload-file">
                     <i style="transform: scale(0.8);" class="me-1 fa fa-upload"></i>
                     Subir archivo
                 </button>
+                {% endif %}
             </div>
 
             <div class="modal fade" id="modal-upload-file" tabindex="-1" aria-hidden="true">
