--- a/admin/src/web/templates/registro_pagos/index.html
+++ b/admin/src/web/templates/registro_pagos/index.html
@@ -109,11 +109,12 @@
 
     .nuevo-pago-btn {
         display: inline-block;
-        padding: 10px 20px;
+        padding: 5px 5px;
         font-size: 1.2em;
         background-color: #0099CC;
         color: white;
         text-align: center;
+        
         /* Centrar el texto dentro del botón */
         border-radius: 8px;
         text-decoration: none;
@@ -123,6 +124,7 @@
 
     .nuevo-pago-btn:hover {
         background-color: #0099CC;
+        align-items: center;
     }
 
     .search-container {
