--- a/admin/src/web/templates/jya/show.html
+++ b/admin/src/web/templates/jya/show.html
@@ -16,12 +16,14 @@
         <i class="fas fa-arrow-left"></i> Volver al listado de jinetes y amazonas
     </a>
    
+    {% if check_permission(session,'jya_destroy')%}
     <form action="{{ url_for('jya.destroy', id=rider.id) }}" method="POST" onsubmit="return confirmDeleteRider();"
         style="display:inline;">
         <button type="submit" class="btn btn-danger btn-icon">
             <i class="fas fa-trash-alt"></i> Eliminar
         </button>
     </form>
+    {% endif %}
 </div>
 
 <div class="card">
@@ -59,9 +61,12 @@
             endif %}
             <br>
             <br>
+
+            {% if check_permission(session,'jya_update')%}
             <a href="{{ url_for('jya.update_general', id=rider.id) }}" class="btn btn-warning btn-icon">
                 <i class="fas fa-edit"></i> Editar Información general
             </a>
+            {% endif %}
 
             <h5 class="border-bottom border-dark pb-2"></h5>
             {% if rider.school %}
@@ -92,10 +97,12 @@
             }}<br>
             {% endif %}
             <br>
+
+            {% if check_permission(session,'jya_update')%}
             <a href="{{ url_for('jya.update_school_job', id=rider.id) }}" class="btn btn-warning btn-icon">
                 <i class="fas fa-edit"></i> Editar Información escolar y laboral
             </a>
-
+            {% endif %}
             <h5 class="border-bottom border-dark pb-2"></h5>
 
             {% if rider.tutor_1_id or rider.tutor_2_id %}
@@ -127,9 +134,13 @@
             {% endif %}
             {% endif %}
             <br>
+
+            {% if check_permission(session,'jya_update')%}
             <a href="{{ url_for('jya.update_tutor', id=rider.id) }}" class="btn btn-warning btn-icon">
                 <i class="fas fa-edit"></i> Editar Información de los tutores
             </a>
+            {% endif %}
+
             <h5 class="border-bottom border-dark pb-2"></h5>
 
             {% if rider.members %}
@@ -142,9 +153,12 @@
                 {% endfor %}
             {% endif %}
             <br>
+            
+            {% if check_permission(session,'jya_update')%}
             <a href="{{ url_for('jya.update_professional', id=rider.id) }}" class="btn btn-warning btn-icon">
                 <i class="fas fa-edit"></i> Editar profesionales que lo atienden
             </a>
+            {% endif %}
 
         </p>
     </div>
@@ -153,13 +167,16 @@
 <br>
 
 <div class="button-group">
-
+    {% if check_permission(session,'jya_update')%}
     <a href="{{ url_for('jya.add_link', id=rider.id) }}" class="btn btn-success btn-icon">
         <i class="fas fa-link"></i> Agregar enlace
     </a>
+    {% endif %}
+    {% if check_permission(session,'jya_update')%}
     <a href="{{ url_for('jya.add_document', id=rider.id) }}" class="btn btn-success btn-icon">
         <i class="fas fa-file-alt"></i> Agregar documento
     </a>
+    {% endif %}
 </div>
 
 <div class="card">
