--- a/admin/src/web/templates/registro_pagos_jya/index.html
+++ b/admin/src/web/templates/registro_pagos_jya/index.html
@@ -75,10 +75,12 @@
         </div>
     </form>
     <!-- Fin de buscador -->
-
+     
+    {% if check_permission(session,'reg_cobros_new')%}
     <a href="{{ url_for('registro_pagos_jya.create') }}" class="btn btn-primary" style="margin-top: 10px; margin-bottom: 20px;">
         <i class="fas fa-user-plus"></i> Registrar nuevo pago J&A
     </a>
+    {% endif %}
 
     <table class="table table-striped">
         <thead>
@@ -122,13 +124,17 @@
                 
                 <td>
                     <div class="action-icons" style="display: flex; gap: 10px;">
+
+                        {% if check_permission(session,'reg_cobros_update')%}
                         <form action="{{ url_for('registro_pagos_jya.update', id=pago.id) }}" method="POST" style="display: inline;">
                             <button type="submit" title="Actualizar" role="button"
                                 style="border: none; background: none; color: #0099CC;">
                                 <i class="fas fa-edit"></i>
                             </button>
                         </form>
-                        
+                        {% endif %}
+
+                        {% if check_permission(session,'reg_cobros_destroy')%}
                         <form action="{{ url_for('registro_pagos_jya.destroy', id=pago.id) }}" method="POST" style="display: inline;"
                             onsubmit="return confirm('¿Quieres eliminar el pago y todos sus datos?');">
                             <button type="submit" title="Eliminar" role="button"
@@ -136,6 +142,8 @@
                                 <i class="fas fa-trash-alt"></i>
                             </button>
                         </form>
+                        {% endif %}
+
                     </div>
                 </td>
             </tr>
