--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -51,37 +51,37 @@
                     {% if is_authenticated(session) %}
                     {% if check_permission(session,'jya_index')%}
                     <li class="nav-item">
-                        <a class="nav-link {% if 'jya' in request.endpoint %}active{% endif %}" aria-current="page"
+                        <a class="nav-link {% if 'jya.' in request.endpoint %}active{% endif %}" aria-current="page"
                             href="{{ url_for('jya.index') }}">J&A</a>
                     </li>
                     {% endif %}
                     {% if check_permission(session,'encuestre_index')%}
                     <li class="nav-item">
-                        <a class="nav-link {% if 'ecuestre' in request.endpoint %}active{% endif %}"
+                        <a class="nav-link {% if 'ecuestre.' in request.endpoint %}active{% endif %}"
                             href="{{ url_for('ecuestre.index') }}">Ecuestre</a>
                     </li>
                     {% endif %}
                     {% if check_permission(session,'team_index')%}
                     <li class="nav-item">
-                        <a class="nav-link {% if 'team' in request.endpoint %}active{% endif %}"
+                        <a class="nav-link {% if 'team.' in request.endpoint %}active{% endif %}"
                             href="{{ url_for('team.index') }}">Equipo</a>
                     </li>
                     {% endif %}
                     {% if check_permission(session,'user_index')%}
                     <li class="nav-item">
-                        <a class="nav-link {% if 'user' in request.endpoint %}active{% endif %}"
+                        <a class="nav-link {% if 'user.' in request.endpoint %}active{% endif %}"
                             href="{{ url_for('user.index') }}">Usuarios</a>
                     </li>
                     {% endif %}
                     {% if check_permission(session,'reg_pagos_index')%}
                     <li class="nav-item">
-                        <a class="nav-link {% if 'registro_pagos' in request.endpoint %}active{% endif %}"
+                        <a class="nav-link {% if 'registro_pagos.' in request.endpoint %}active{% endif %}"
                             href="{{ url_for('registro_pagos.index') }}">Registro de Pagos</a>
                     </li>
                     {% endif %}
                     {% if check_permission(session,'reg_cobros_index')%}
                     <li class="nav-item">
-                        <a class="nav-link {% if 'registro_pagos_jya' in request.endpoint %}active{% endif %}"
+                        <a class="nav-link {% if 'registro_pagos_jya.' in request.endpoint %}active{% endif %}"
                             href="{{ url_for('registro_pagos_jya.index') }}">Registro de Cobros</a>
                     </li>
                     {% endif %}
