Issue #49 - Explicit Kwargs

--- a/admin/src/web/templates/registro_pagos_jya/update.html
+++ b/admin/src/web/templates/registro_pagos_jya/update.html
@@ -9,7 +9,7 @@
 <h1 class="text-primary mb-4">Actualizar un pago de J&A</h1>
 <p>Formulario para actualizar un pago de J&A</p>
 
-<form method="POST" class="w-50 p-4 bg-light rounded shadow">
+<form method="POST" class="w-100 p-4 bg-light rounded shadow" style="min-width: 400px !important;">
     {{ form.csrf_token }}
 
     <!-- J&A field -->
@@ -17,7 +17,7 @@
         {{ form.jinete_amazona.label(class="form-label") }}
         {{ form.jinete_amazona(class="form-control") }}
         {% for error in form.jinete_amazona.errors %}
-            <span class="text-danger">{{ error }}</span>
+        <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
 
@@ -26,7 +26,7 @@
         {{ form.fecha_pago.label(class="form-label") }}
         {{ form.fecha_pago(class="form-control") }}
         {% for error in form.fecha_pago.errors %}
-            <span class="text-danger">{{ error }}</span>
+        <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
 
@@ -35,7 +35,7 @@
         {{ form.medio_de_pago.label(class="form-label") }}
         {{ form.medio_de_pago(class="form-control") }}
         {% for error in form.medio_de_pago.errors %}
-            <span class="text-danger">{{ error }}</span>
+        <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
 
@@ -44,7 +44,7 @@
         {{ form.monto.label(class="form-label") }}
         {{ form.monto(class="form-control") }}
         {% for error in form.monto.errors %}
-            <span class="text-danger">{{ error }}</span>
+        <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
 
@@ -53,7 +53,7 @@
         {{ form.receptor.label(class="form-label") }}
         {{ form.receptor(class="form-control") }}
         {% for error in form.receptor.errors %}
-            <span class="text-danger">{{ error }}</span>
+        <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
 
@@ -62,7 +62,7 @@
         {{ form.estado_de_pago.label(class="form-label") }}
         {{ form.estado_de_pago(class="form-control") }}
         {% for error in form.estado_de_pago.errors %}
-            <span class="text-danger">{{ error }}</span>
+        <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
 
@@ -71,7 +71,7 @@
         {{ form.observaciones.label(class="form-label") }}
         {{ form.observaciones(class="form-control") }}
         {% for error in form.observaciones.errors %}
-            <span class="text-danger">{{ error }}</span>
+        <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
 
