--- a/admin/src/web/templates/user/update.html
+++ b/admin/src/web/templates/user/update.html
@@ -47,7 +47,7 @@
         <!-- Alias field -->
         <div class="form-group mb-3">
             {{ form.alias.label(class="form-label") }}
-            {{ form.alias(class="form-control", value=user.alias) }}
+            {{ form.alias(class="form-control") }}
             {% for error in form.alias.errors %}
                 <span class="text-danger">{{ error }}</span>
             {% endfor %}
@@ -56,7 +56,7 @@
         <!-- Email field -->
         <div class="form-group mb-3">
             {{ form.email.label(class="form-label") }}
-            {{ form.email(class="form-control", value=user.email) }}
+            {{ form.email(class="form-control") }}
             {% for error in form.email.errors %}
                 <span class="text-danger">{{ error }}</span>
             {% endfor %}
