Consistencia del layout en las distintas páginas

--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -34,8 +34,9 @@
 </head>
 
 <body style="padding-top: 75px;">
-    <nav class="navbar navbar-expand-lg bg-light shadow-sm fixed-top">
-        <div class="container-fluid">
+    <nav style="font-family: system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue','Noto Sans','Liberation Sans',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';"
+        class="navbar navbar-expand-lg bg-light shadow-sm fixed-top px-0">
+        <div class="container-fluid px-3">
             <!-- Navbar del Layout, con el logo de CEDICA y los enlaces a las secciones de la página. -->
             <a class="navbar-brand" href="{{ url_for('home') }}"><img
                     src="{{ url_for('static', filename='logos/Imagotipo CEDICA.png')}}" width="175"
