--- a/admin/src/web/templates/home.html
+++ b/admin/src/web/templates/home.html
@@ -7,56 +7,50 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
 <style>
     body {
+        padding-top: 0 !important;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 90vh;
+        height: 100vh;
         margin: 0;
-        background-color: #f4f4f4;
-        font-family: Arial, sans-serif;
+        background-image: linear-gradient(-145deg,
+                hsl(190deg 33% 63%) 0%,
+                hsl(191deg 31% 71%) 12%,
+                hsl(191deg 28% 79%) 25%,
+                hsl(191deg 23% 87%) 37%,
+                hsl(0deg 0% 95%) 50%,
+                hsl(30deg 62% 89%) 62%,
+                hsl(31deg 77% 84%) 74%,
+                hsl(32deg 82% 78%) 87%,
+                hsl(33deg 82% 71%) 100%);
+
+        background-repeat: no-repeat;
     }
 
     .main-container {
         text-align: center;
-        background-color: white;
-        padding: 2rem;
+        background-color: rgba(255, 255, 255, 0.25);
+        backdrop-filter: blur(15px);
+        padding: 4rem 4.5rem;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    h1 {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-    }
 
     p {
         font-size: 1.25rem;
-        margin-bottom: 2rem;
-    }
-
-    a {
-        display: inline-block;
-        color: white;
-        padding: 0.75rem 1.5rem;
-        border-radius: 5px;
-        text-decoration: none;
-        font-size: 1.25rem;
-    }
-
-    a:hover {
-        background-color: #00f7ff;
     }
 
     .logo {
-        width: 300px;
+        width: 350px;
         height: auto;
-        margin-bottom: 1.5rem;
+        margin-bottom: 2.5rem;
     }
 </style>
 {% endblock %}
 
 {% block content %}
-<div class="main-container p-5">
+<div class="main-container">
     <img src="{{ url_for('static', filename='logos/Logo CEDICA.png') }}" alt="Logo" class="logo">
     <h1>Bienvenido a CEDICA</h1>
     {% if not is_authenticated(session) %}
