--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -10,6 +10,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+        #container {
+            animation: fadeIn 0.35s;
+        }
+
+        .navbar {
+            background-color: rgba(255, 255, 255, 0.25) !important;
+            backdrop-filter: blur(15px) !important;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
         aside:empty,
         section:empty {
             display: none;
@@ -28,6 +47,64 @@
         a:hover {
             text-decoration: none !important;
         }
+
+        @keyframes fadeUpIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .nav-item {
+            opacity: 0;
+            animation: fadeUpIn 0.5s forwards;
+        }
+
+        .nav-item:nth-child(1) {
+            animation-delay: 0.1s;
+        }
+
+        .nav-item:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .nav-item:nth-child(3) {
+            animation-delay: 0.3s;
+        }
+
+        .nav-item:nth-child(4) {
+            animation-delay: 0.4s;
+        }
+
+        .nav-item:nth-child(5) {
+            animation-delay: 0.5s;
+        }
+
+        .nav-link.active {
+            margin-bottom: -2px;
+        }
+
+        .nav-link.active::after {
+            content: '';
+            display: block;
+            position: relative;
+            width: 90%;
+            margin: 0 5%;
+            height: 2px;
+            top: 17px;
+            background-color: #454545;
+        }
+
+        @media screen and (max-width: 991px) {
+            .nav-link.active::after {
+                display: none;
+            }
+        }
     </style>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -35,7 +112,7 @@
 
 <body style="padding-top: 75px;">
     <nav style="font-family: system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue','Noto Sans','Liberation Sans',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';"
-        class="navbar navbar-expand-lg bg-light shadow-sm fixed-top px-0">
+        class="navbar navbar-expand-lg shadow-sm fixed-top px-0">
         <div class="container-fluid px-3">
             <!-- Navbar del Layout, con el logo de CEDICA y los enlaces a las secciones de la página. -->
             <a class="navbar-brand" href="{{ url_for('home') }}"><img
@@ -48,7 +125,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- Enlaces a las secciones de la página -->
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto ms-3 gap-2 mb-2 mb-lg-0">
                     {% if is_authenticated(session) %}
                     {% if check_permission(session,'jya_index')%}
                     <li class="nav-item">
@@ -175,7 +252,6 @@
     {% endblock %}
     <script>
         // Evento que se ejecuta cuando se termina de cargar el DOM y oculta el aside si está vacío.
-
         document.addEventListener("DOMContentLoaded", function () {
             const mainElement = document.querySelector('main');
             const asideElement = document.querySelector('aside');
