--- a/admin/src/web/templates/error.html
+++ b/admin/src/web/templates/error.html
@@ -9,6 +9,42 @@
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='error.css') }}">
     {% endblock %}
+    <style>
+        body {
+            background-image: linear-gradient(-145deg,
+                    hsl(190deg 33% 63%) 0%,
+                    hsl(191deg 31% 71%) 12%,
+                    hsl(191deg 28% 79%) 25%,
+                    hsl(191deg 23% 87%) 37%,
+                    hsl(0deg 0% 95%) 50%,
+                    hsl(30deg 62% 89%) 62%,
+                    hsl(31deg 77% 84%) 74%,
+                    hsl(32deg 82% 78%) 87%,
+                    hsl(33deg 82% 71%) 100%);
+            background-repeat: no-repeat;
+            height: 100vh;
+            margin: 0;
+        }
+
+        #container {
+            animation: fadeIn 0.5s;
+            background-color: rgba(255, 255, 255, 0.25);
+            backdrop-filter: blur(15px);
+            padding: 3rem 4rem;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 
 <body>
