--- a/admin/src/web/templates/home.html
+++ b/admin/src/web/templates/home.html
@@ -12,6 +12,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
+        width: 100vw !important;
         margin: 0;
         background-image: linear-gradient(-145deg,
                 hsl(190deg 33% 63%) 0%,
@@ -30,12 +31,11 @@
     .main-container {
         text-align: center;
         background-color: rgba(255, 255, 255, 0.25);
-        backdrop-filter: blur(15px);
+        backdrop-filter: blur(15px) saturate(125%);
         padding: 4rem 4.5rem;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-
 
     p {
         font-size: 1.25rem;
@@ -45,6 +45,20 @@
         width: 350px;
         height: auto;
         margin-bottom: 2.5rem;
+    }
+
+    @media screen and (max-width: 768px) {
+        .main-container {
+            padding: 2rem 2.5rem;
+        }
+
+        .logo {
+            width: 250px;
+        }
+
+        p {
+            font-size: 1rem;
+        }
     }
 </style>
 {% endblock %}
