--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -85,6 +85,14 @@
             animation-delay: 0.5s;
         }
 
+        .nav-item:nth-child(6) {
+            animation-delay: 0.6s;
+        }
+
+        .nav-item:nth-child(7) {
+            animation-delay: 0.6s;
+        }
+
         .nav-link.active {
             margin-bottom: -2px;
         }
