--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -97,7 +97,7 @@
             margin-bottom: -2px;
         }
 
-        .nav-link.active::after {
+        .navbar .nav-link.active::after {
             content: '';
             display: block;
             position: relative;
