--- a/admin/src/web/templates/jya/add_document.html
+++ b/admin/src/web/templates/jya/add_document.html
@@ -29,13 +29,16 @@
         max-width: 600px;
         margin: auto;
     }
+
     .form-label {
         font-weight: bold;
     }
+
     .form-control {
         border-radius: 0.25rem;
     }
-    .btn {
+
+    form .btn {
         margin-top: 10px;
     }
 </style>
