--- a/admin/src/web/templates/team/show.html
+++ b/admin/src/web/templates/team/show.html
@@ -129,7 +129,8 @@
         margin-left: 10px;
     }
 
-    .btn {
+    .button-group .btn,
+    form .btn {
         border-radius: 20px;
         padding: 10px 20px;
     }
