--- a/admin/src/web/templates/jya/add_link.html
+++ b/admin/src/web/templates/jya/add_link.html
@@ -12,22 +12,22 @@
 
 <form method="post" enctype="multipart/form-data" class="p-4 bg-light rounded shadow">
     {{ form.hidden_tag() }}
-    
+
     <div class="mb-3">
         <label for="document_name" class="form-label">Nombre</label>
         {{ form.document_name(class="form-control") }}
     </div>
-    
+
     <div class="mb-3">
         <label for="document_path" class="form-label">URL</label>
         {{ form.document_path(class="form-control") }}
     </div>
-    
+
     <div class="mb-3">
         <label for="document_type" class="form-label">Tipo de documentación</label>
         {{ form.document_type(class="form-control") }}
     </div>
-    
+
     <button type="submit" class="btn btn-primary">{{ form.submit.label }}</button>
     <a href="{{ url_for('jya.show', id=rider_id) }}" class="btn btn-secondary">Cancelar</a>
 </form>
@@ -37,13 +37,16 @@
         max-width: 600px;
         margin: auto;
     }
+
     .form-label {
         font-weight: bold;
     }
+
     .form-control {
         border-radius: 0.25rem;
     }
-    .btn {
+
+    form .btn {
         margin-top: 10px;
     }
 </style>
