--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -14,6 +14,10 @@
             animation: fadeIn 0.35s;
         }
 
+        .btn {
+            transition: 0.3s;
+        }
+
         .navbar {
             background-color: rgba(255, 255, 255, 0.25) !important;
             backdrop-filter: blur(15px) !important;
