--- a/admin/src/web/templates/team/update.html
+++ b/admin/src/web/templates/team/update.html
@@ -245,7 +245,7 @@
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
   }
 
-  .btn {
+  form .btn {
     border-radius: 5px;
     padding: 10px 15px;
     font-size: 16px;
