--- a/admin/src/web/templates/registro_pagos_jya/index.html
+++ b/admin/src/web/templates/registro_pagos_jya/index.html
@@ -101,7 +101,7 @@
 </a>
 {% endif %}
 
-<table class="table table-striped rounded shadow-sm" style="overflow: hidden;">
+<table class="table table-striped">
     <thead>
         <tr>
             <th style="background-color: #0056b3; color: #ffffff;">J&A</th>
