--- a/admin/src/web/templates/team/index.html
+++ b/admin/src/web/templates/team/index.html
@@ -80,8 +80,8 @@
   <i class="fas fa-user-plus"></i> Crear nuevo miembro
 </a>
 
-<table class="table table-striped rounded shadow-sm"
-  style="margin-top: 20px; background-color: #ffffff; overflow: hidden;">
+<table class="table table-striped"
+  style="margin-top: 20px; background-color: #ffffff; border-radius: 5px; overflow: hidden; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
   <thead>
     <tr>
       <th style="background-color: #0056b3; color: #ffffff;">
