--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
+        /* Estilos generales para la página */
         #container {
             animation: fadeIn 0.35s;
         }
@@ -23,6 +24,7 @@
             backdrop-filter: blur(15px) !important;
         }
 
+        /* Animación para la entrada del contenido de la página */
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -52,6 +54,7 @@
             text-decoration: none !important;
         }
 
+        /* Animación de entrada para los nav-items */
         @keyframes fadeUpIn {
             from {
                 opacity: 0;
@@ -64,28 +67,51 @@
             }
         }
 
-        .nav-item {
+        /* Estilos para los mensajes de error, éxito, etc. */
+        .alert {
+            backdrop-filter: blur(15px);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .alert-success {
+            background-color: rgba(90, 205, 160, 0.1) !important;
+            border-color: rgba(14, 108, 36, 0.75) !important;
+        }
+
+        .alert-danger {
+            background-color: rgba(207, 43, 43, 0.1) !important;
+            border-color: rgba(115, 20, 20, 0.75) !important;
+        }
+
+        /* Efecto de animación para los enlaces de la barra de navegación y para las alertas */
+        .nav-item,
+        .alert {
             opacity: 0;
             animation: fadeUpIn 0.5s forwards;
         }
 
-        .nav-item:nth-child(1) {
+        .nav-item:nth-child(1),
+        .alert:nth-child(1) {
             animation-delay: 0.1s;
         }
 
-        .nav-item:nth-child(2) {
+        .nav-item:nth-child(2),
+        .alert:nth-child(2) {
             animation-delay: 0.2s;
         }
 
-        .nav-item:nth-child(3) {
+        .nav-item:nth-child(3),
+        .alert:nth-child(3) {
             animation-delay: 0.3s;
         }
 
-        .nav-item:nth-child(4) {
+        .nav-item:nth-child(4),
+        .alert:nth-child(4) {
             animation-delay: 0.4s;
         }
 
-        .nav-item:nth-child(5) {
+        .nav-item:nth-child(5),
+        .alert:nth-child(5) {
             animation-delay: 0.5s;
         }
 
@@ -101,6 +127,7 @@
             margin-bottom: -2px;
         }
 
+        /* Línea que indica la sección activa en la barra de navegación */
         .navbar .nav-link.active::after {
             content: '';
             display: block;
@@ -166,13 +193,13 @@
                     {% if check_permission(session,'reg_pagos_index')%}
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint.startswith('registro_pagos.') %}active{% endif %}"
-                            href="{{ url_for('registro_pagos.index') }}">Registro de Pagos</a>
+                            href="{{ url_for('registro_pagos.index') }}">Registro de pagos</a>
                     </li>
                     {% endif %}
                     {% if check_permission(session,'reg_cobros_index')%}
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint.startswith('registro_pagos_jya.') %}active{% endif %}"
-                            href="{{ url_for('registro_pagos_jya.index') }}">Registro de Cobros</a>
+                            href="{{ url_for('registro_pagos_jya.index') }}">Registro de cobros</a>
                     </li>
                     {% endif %}
                     {% endif %}
