--- a/admin/src/web/templates/auth/login.html
+++ b/admin/src/web/templates/auth/login.html
@@ -6,46 +6,81 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <style>
     body {
-        background-color: #f8f9fa;
+        background-image: linear-gradient(-145deg,
+                hsl(190deg 33% 63%) 0%,
+                hsl(191deg 31% 71%) 12%,
+                hsl(191deg 28% 79%) 25%,
+                hsl(191deg 23% 87%) 37%,
+                hsl(0deg 0% 95%) 50%,
+                hsl(30deg 62% 89%) 62%,
+                hsl(31deg 77% 84%) 74%,
+                hsl(32deg 82% 78%) 87%,
+                hsl(33deg 82% 71%) 100%);
+
+        background-repeat: no-repeat;
+        height: 100vh;
     }
+
 
     .login-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 50vh;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+}
 
-    .login-card {
-        background: #0099CC;
-        /* Color celeste */
-        padding: 2rem;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        width: 600px;
-    }
+.login-card {
+    background-color: rgba(255, 255, 255, 0.25);
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra más sutil */
+    width: 500px; /* Ajustar el ancho para un diseño más compacto */
+}
 
-    .login-card h2 {
-        margin-bottom: 1.5rem;
-        text-align: center;
-        color: #f6f4eb;
-        /* un amarillito */
-    }
+.login-card h2 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+    color: #333; 
+    font-family: 'Arial', sans-serif; 
+}
 
-    .form-control {
-        margin-bottom: 2.5rem;
-    }
 
-    .btn-login {
-        background-color: #aad6f9 !important;
-        /* amarillito */
-        color: #ADD8E6;
-    }
+.form-control {
+    margin-bottom: 1.5rem;
+    border: 1px solid rgba(0, 0, 0, 0.2); /* Borde sutil */
+    border-radius: 5px; /* Bordes redondeados */
+    padding: 0.5rem; /* Relleno para mayor comodidad */
+    background-color: rgba(0, 0, 0, 0.6); /* Fondo oscuro y translúcido */
+    color: #ffffff; /* Texto blanco para contraste */
+}
 
-    .btn-login:hover {
-        background-color: #e7def3 !important;
-        /* Un azul más oscuro */
-    }
+.form-control::placeholder {
+    color: rgba(255, 255, 255, 0.25); /* Color del texto del placeholder */
+}
+
+.form-control:focus {
+    border-color: #0056b3; 
+    outline: none; 
+    background-color: rgba(0, 0, 0, 0.8); /* Fondo más oscuro al enfocar */
+}
+
+.btn-login {
+    background-color: #0056b3; /* Azul más profesional */
+    color: #ffffff; /* Texto blanco para contraste */
+    border: none; /* Sin borde */
+    border-radius: 1px; /* Bordes redondeados */
+    padding: 0.75rem 1.5rem; /* Relleno uniforme */
+    cursor: pointer; /* Indicar que es clickeable */
+    transition: background-color 0.3s; /* Transición suave para hover */
+}
+
+.btn-login:hover {
+    background-color: #004494; /* Azul más oscuro al pasar el ratón */
+}
+
+
+
+
 </style>
 {% endblock %}
 
