--- a/admin/src/web/templates/auth/login.html
+++ b/admin/src/web/templates/auth/login.html
@@ -23,81 +23,78 @@
 
 
     .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70vh;
-}
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+    }
 
-.login-card {
-    background-color: rgba(255, 255, 255, 0.25);
-    padding: 2rem;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra más sutil */
-    width: 500px; /* Ajustar el ancho para un diseño más compacto */
-}
+    .login-card {
+        background-color: rgba(255, 255, 255, 0.25);
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        /* Sombra más sutil */
+        width: 500px;
+        /* Ajustar el ancho para un diseño más compacto */
+    }
 
-.login-card h2 {
-    margin-bottom: 1.5rem;
-    text-align: center;
-    color: #333; 
-    font-family: 'Arial', sans-serif; 
-}
-
-
-.form-control {
-    margin-bottom: 1.5rem;
-    border: 1px solid rgba(0, 0, 0, 0.2); /* Borde sutil */
-    border-radius: 5px; /* Bordes redondeados */
-    padding: 0.5rem; /* Relleno para mayor comodidad */
-    background-color: rgba(0, 0, 0, 0.6); /* Fondo oscuro y translúcido */
-    color: #ffffff; /* Texto blanco para contraste */
-}
-
-.form-control::placeholder {
-    color: rgba(255, 255, 255, 0.25); /* Color del texto del placeholder */
-}
-
-.form-control:focus {
-    border-color: #0056b3; 
-    outline: none; 
-    background-color: rgba(0, 0, 0, 0.8); /* Fondo más oscuro al enfocar */
-}
-
-.btn-login {
-    background-color: #0056b3; /* Azul más profesional */
-    color: #ffffff; /* Texto blanco para contraste */
-    border: none; /* Sin borde */
-    border-radius: 1px; /* Bordes redondeados */
-    padding: 0.75rem 1.5rem; /* Relleno uniforme */
-    cursor: pointer; /* Indicar que es clickeable */
-    transition: background-color 0.3s; /* Transición suave para hover */
-}
-
-.btn-login:hover {
-    background-color: #004494; /* Azul más oscuro al pasar el ratón */
-}
+    .login-card h2 {
+        margin-bottom: 1.5rem;
+        text-align: center;
+        color: #333;
+        font-family: 'Arial', sans-serif;
+    }
 
 
+    .form-control {
+        margin-bottom: 1.5rem;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        /* Borde sutil */
+        border-radius: 5px;
+        /* Bordes redondeados */
+        padding: 0.5rem;
+        /* Relleno para mayor comodidad */
+        background-color: rgba(50, 50, 50, 0.05) !important;
+        backdrop-filter: blur(5px) saturate(125%);
+        /* Fondo oscuro y translúcido */
+    }
 
+    .form-control::placeholder {
+        color: rgba(255, 255, 255, 0.25);
+        /* Color del texto del placeholder */
+    }
 
+    .form-control:focus {
+        border-color: #0056b3;
+        outline: none;
+    }
+
+    .btn-login {
+        border: none !important;
+        /* Sin borde */
+        padding: 0.75rem 1.5rem;
+        /* Relleno uniforme */
+        cursor: pointer;
+        /* Indicar que es clickeable */
+    }
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="login-container">
     <div class="login-card">
-        <h2><i class="fas fa-user-lock"></i> Iniciar Sesión</h2>
+        <h2><i class="fas fa-user-lock"></i> Iniciar sesión</h2>
         <form method="post" action="{{ url_for('auth.authenticate') }}">
             <div class="form-group">
-                <label for="email">Correo Electrónico</label>
+                <label class="mb-1" for="email">Correo electrónico</label>
                 <input type="email" class="form-control" id="email" name="email" required>
             </div>
             <div class="form-group">
-                <label for="password">Contraseña</label>
+                <label class="mb-1" for="password">Contraseña</label>
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
-            <button type="submit" class="btn btn-login btn-block">Entrar</button>
+            <button type="submit" class="btn btn-login btn-block shadow-sm">Entrar</button>
         </form>
     </div>
 </div>
